# OpenGLTemplate

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
cmake/Modules/: Findglbinding.cmake
source/: Rendering.cpp  Rendering.h
